# chaba

./: .codeiumignore  .env  .env.template  .gitattributes  .gitignore  .gitmodules  .windsurfrules  App.tsx  JARVIS_SYSTEM_DOCUMENTATION.md  README.md  TODO.md  WEBSOCKET_DEBUGGING_SUMMARY.md  devops-mcp.http  docker-compose-diagram.md  docker-compose.mcp-ghostroute.yml  docker-compose.portainer.yml  docker-compose.yml  index.js  mcp-cuda.patch  mcp-wiki-client.sh  mcp_custom_config.json  mcp_idc1_config.json  metadata.json  package-lock.json  package.json  playwright.config.js  plugin.json  proxy-server.mjs  tailwind.config.cjs  test_bitnet_compare.ps1  test_bitnet_compare.sh  test_connection.js  test_mcp_tools.js  vite.config.ts
backend/: main.py  requirements.txt
chaba-node-test/: package.json
chaba-node-test (2)/: proxy-server.mjs
docker/: docker-compose.yml
docs/: BRANCH_WORKFLOW_GUIDE.md  BUGFIX_AUTOAGENT_RUNNER_JS_ERROR.md  JARVIS_LIVE_SCENARIOS_WIKI.md  JARVIS_LIVE_TOOLS.md  MCP_WIKI_ASSESSMENT.md  MCP_WIKI_JARVIS_INTEGRATION.md  MCP_WIKI_POST.md  MODULARIZATION_GUIDE.md  MODULARIZATION_STRATEGY.md  OVERVIEW.md  README.md  WIKI_DOCUMENTATION_POLICY.md  architecture.md  backlog.md  detects-api.md  dev-host.md  docker-management.md  host-idc1.json  host-pc1.json  host-pc2.json  idc1-stack.json  idc1-stacks.json  idc1-vpn.json  idc1_url.json  kb-h3-pages.md  mcp-nodehost.md  (+38 more)
mcp/mcp-docker/: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
mcp/mcp-docker/src/docker_mcp/: docker_executor.py  handlers.py  http_server.py  server.py
(+1164 files in other folders)
